# ComfyUI-AIGC-platform

./: .env.example  .gitattributes  .gitignore  AGENTS.md  docker-compose.dev.yml  docker-compose.yml  install_nano_banana_pro.py  platform.config.env
ComfyUI-master-fitow/: .gitignore  requirements.txt
ComfyUI-master-fitow/custom_nodes/ComfyUI-Multiband/: README.md  __init__.py  multiband_types.py  pyproject.toml  requirements.txt
ComfyUI-master-fitow/custom_nodes/ComfyUI-Multiband/nodes/: __init__.py  compose.py  convert.py  decompose.py  load.py  operations.py  preview.py  save.py
ComfyUI-master-fitow/custom_nodes/ComfyUI-Multiband/utils/: __init__.py  io_exr.py  io_numpy.py  io_tiff.py  visualization.py
ComfyUI-master-fitow/custom_nodes/ComfyUI-Multiband/web/js/: preview_multiband.js
art-design-pro/: .env.development  .gitignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
docs/: ##deployment-guide.md##  #deployment-guide.md#  .deployment-guide.md.swp  .env.platform  .env.platform.example  00_README.md  01_环境与依赖安装.md  02_PostgreSQL_安装与初始化规范.md  03_配置说明_前端后端ComfyUI.md  04_SQLite_to_PostgreSQL_迁移说明.md  05_功能模块文档.md  10_平台启动与停止.md  11_ComfyUI_启动逻辑说明.md  20_系统架构与功能总览.md  21_API接口完整规范.md  24_用户项目生成日志归属逻辑与潜在漏洞分析.md  30_Docker_Compose部署.md  README.md  art-bot-chat-feature.md  deployment-guide.md  feature-modules.md  llm-chat-config.md  skills-config.md  前端契约与后端适配差异清单.md  数据生成平台API与数据模型规范.md  数据生成平台系统概述.md
sam3-annotation-tool/: .gitignore  LICENSE  README.md  app.py  pyproject_backup  (+1 more)
(+137 files in other folders)
