[project]
name = "comfyui-multiband"
description = "Multi-channel image handling for ComfyUI. Work with images that have arbitrary number of channels (segmentation masks, feature maps, spectral bands, etc.)."
version = "0.0.1"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "torch>=1.9.0",
    "tifffile>=2023.0.0",
]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-Multiband"
Documentation = "https://github.com/PozzettiAndrea/ComfyUI-Multiband/blob/main/README.md"

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "MultiBand"
Icon = ""

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
